<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Event_create_Activity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/previewev"
            android:layout_width="187dp"
            android:layout_height="124dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/BUTTON1" />



        <Button
            android:id="@+id/edit_preview_button"
            android:layout_width="185dp"
            android:layout_height="125dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/BUTTON1"
            android:text="@string/action_edit_event_pic"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eventname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autoText="false"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/Name_event_edit"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/edit_Text_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/edit_preview_button"
            app:layout_constraintStart_toStartOf="@+id/edit_preview_button"
            app:layout_constraintTop_toBottomOf="@+id/edit_preview_button" />

        <EditText
            android:id="@+id/eventUrl"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/action_get_eventURL"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/edit_Text_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <TextView
            android:id="@+id/loginorg_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="@color/BUTTON1"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/eventname"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/eventname"
            app:layout_constraintTop_toBottomOf="@+id/eventname" />


        <android.support.design.widget.TextInputLayout

            android:id="@+id/textInputLayout3"
            android:layout_width="280dp"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            app:boxBackgroundMode="filled"
            app:layout_constraintEnd_toEndOf="@+id/edit_preview_button"
            app:layout_constraintStart_toStartOf="@+id/edit_preview_button"
            app:layout_constraintTop_toBottomOf="@+id/loginorg_ac">

            <android.support.design.widget.TextInputEditText


                android:id="@+id/event_info_edit"
                android:layout_width="233dp"
                android:layout_height="145dp"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/event_info_edit"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textColor="@color/edit_Text_color"
                android:textStyle="bold|italic" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addeventbutton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/action_addevent"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventUrl" />




    </android.support.constraint.ConstraintLayout>

</ScrollView>